2002-07-04  Paolo Maggi <maggi@athena.polito.it>

	* gedit-document.c: save used encoding while loading a file,
	try to use "ISO-8859-15" as last resource while loading a file.
	
	* gedit-file.c (gedit_file_save_as): fix bug #87276

	* gedit-prefs-manager.c (GPM_DEFAULT_BACKUP_COPY_EXTENSION): Changed
	the default to ~.  This is also reflected in the new GConf
	schema file.

2002-07-03  Federico Mena Quintero  <federico@ximian.com>

	* gedit-prefs-manager.c (GPM_DEFAULT_CREATE_BACKUP_COPY): Changed
	the default to true.  This is also reflected in the new GConf
	schema file.

2002-07-03  Paolo Maggi <maggi@athena.polito.it>

	* bonobo-mdi.[ch] (bonobo_mdi_get_window_info)
	new method
	(app_clone): set the size of the new window to the
	one of the cloned one
	
2002-07-03  Paolo Maggi <maggi@athena.polito.it>

	* gnome-vfs-helpers.[ch]: removed

	* *.c: s/gnome_vfs_x/eel

2002-06-28  James Willcox  <jwillcox@cs.indiana.edu>

	* dialogs/gedit-dialog-goto-line.c:  Only allow digits in the entry

2002-06-17  Federico Mena Quintero  <federico@ximian.com>

	Fixes #84986.

	* bonobo-mdi.c (gen_role): Moved over from gedit-mdi.c.
	(app_create): Added a "window_role" argument so that we can set up
	the window's role here.
	(app_clone): Likewise.
	(bonobo_mdi_open_toplevel): Likewise.
	(bonobo_mdi_add_toplevel_view): Likewise.

	* bonobo-mdi-session.c (restore_window_child): Pass the role
	argument to bonobo_mdi_add_toplevel_view().
	(restore_window): Pass the role argument to
	bonobo_mdi_open_toplevel().

	* gedit2.c (main): Likewise.

	* gedit-mdi.c (gedit_mdi_app_created_handler): Do not set the role
	here.

2002-06-14  Paolo Maggi <maggi@athena.polito.it>

	* gedit-prefs-manager.[ch]: new files

	* Makefile.am:
	* gedit-commands.c:
	* gedit-document.c:
	* gedit-file.c:
	* gedit-mdi.[ch]:
	* gedit-print.c:
	* gedit-recent.c:
	* gedit-session.c:
	* gedit-undo-manager.c:
	* gedit-view.c:
	* gedit2.c:
	* dialogs/gedit-preferences-dialog.[ch]: