@@ -15,7 +15,7 @@ TODO (last update: July 4, 2002)
 [ ] #75861 Deleting a file in use does not prompt for "save" on close
 [ ] #85540 Plugins not built with -module
 [ ] #76001 Should not save window geometry on exit (Paolo)
-[ ] #86333 modality problem on info/message box (Paolo)
+[X] #86333 modality problem on info/message box (Paolo)
 [ ] #87265 s/gedit/Text Editor? (Paolo)
 [ ] #80342 gedit fails to build on RedHat 7.1 for Alpha (Paolo)
 [ ] #77184 Undo should manage "need-saving" flag (Paolo)
